Note SIMD requirements in progress report